@@ -21,18 +21,22 @@ in
     services.swww.slideshow = {
       enable = mkDefault true;
       interval = mkDefault 300;
-      images = mkDefault (with wallpapers; [
-        (fetchurl black-hole)
-        (fetchurl pixel-galaxy)
-        (fetchurl space-piano)
-        (fetchurl galaxy)
-        (fetchurl out-of-this-whirl)
-        (fetchurl nebula)
-        (fetchurl nebula-2)
-        (fetchurl blue-marble)
-        (fetchurl blue-marble-2)
-        (fetchurl blue-marble-3)
-      ]);
+      images = mkDefault (
+        with wallpapers;
+        [
+          (fetchurl black-hole)
+          (fetchurl pixel-galaxy)
+          (fetchurl space-piano)
+          (fetchurl space-jelly)
+          (fetchurl galaxy)
+          (fetchurl out-of-this-whirl)
+          (fetchurl nebula)
+          (fetchurl nebula-2)
+          (fetchurl blue-marble)
+          (fetchurl blue-marble-2)
+          (fetchurl blue-marble-3)
+        ]
+      );
     };
   };
 }
