@@ -1,5 +1,6 @@
 7-26-2025
 - add modules.system-stylizer to nixos for automatic theming of sddm and grub based on the current desktop theme in home-manager
+- add space-jelly to swww wallpaper slideshow for cosmos theme
 
 
 7-25-2025
